[gd_scene load_steps=39 format=3 uid="uid://bwyok34rduc2h"]

[ext_resource type="Script" uid="uid://dkgv5f1eblrk2" path="res://scenes/enemy_jump.gd" id="1_2prdc"]
[ext_resource type="Script" uid="uid://d1t8dwjugdj64" path="res://scenes/enemy_bomber.gd" id="1_xmjev"]
[ext_resource type="Texture2D" uid="uid://bfmd1soivmlg7" path="res://sprites/dead_fire_spr_0.png" id="2_gafi4"]
[ext_resource type="Texture2D" uid="uid://cxc5th2r8hfpc" path="res://sprites/dead_fire_spr_1.png" id="3_jwc7p"]
[ext_resource type="Texture2D" uid="uid://deqbcbnajy7k5" path="res://sprites/dead_fire_spr_2.png" id="4_hb2qp"]
[ext_resource type="Texture2D" uid="uid://dct2sq70pvlkg" path="res://sprites/horu/images/enemy_bomber_spr_0.png" id="5_m1i1i"]
[ext_resource type="Texture2D" uid="uid://mk0x7702son4" path="res://sprites/horu/images/enemy_bomber_berserk_spr_0.png" id="6_t8377"]
[ext_resource type="Texture2D" uid="uid://cup7k3l7eenui" path="res://sprites/horu/images/enemy_bomber_berserk_spr_1.png" id="7_ajmyw"]
[ext_resource type="Texture2D" uid="uid://nedkg2s6njx5" path="res://sprites/horu/images/enemy_bomber_berserk_spr_2.png" id="8_66spr"]
[ext_resource type="Texture2D" uid="uid://dajks2kb60ljq" path="res://sprites/horu/images/enemy_bomber_spr_1.png" id="9_5ipwl"]
[ext_resource type="Texture2D" uid="uid://cr6d63pojg6q3" path="res://sprites/horu/images/enemy_bomber_spr_2.png" id="10_bfi6l"]
[ext_resource type="Texture2D" uid="uid://j2dflkwrnjua" path="res://sprites/horu/images/enemy_bomber_cool_face_spr_0.png" id="11_soi5h"]
[ext_resource type="Texture2D" uid="uid://ds7lkb7h3kcjl" path="res://sprites/horu/images/enemy_bomber_cool_face_spr_1.png" id="12_c5t40"]
[ext_resource type="Texture2D" uid="uid://bja17yog5nx7a" path="res://sprites/horu/images/enemy_bomber_cool_face_spr_2.png" id="13_e76v7"]
[ext_resource type="Texture2D" uid="uid://vghjt4d6oumx" path="res://sprites/horu/images/enemy_bomber_anger_spr_0.png" id="14_wldrk"]
[ext_resource type="Texture2D" uid="uid://br3c3ncbom1v3" path="res://sprites/horu/images/enemy_bomber_anger_spr_1.png" id="15_y0r2w"]
[ext_resource type="Texture2D" uid="uid://brh5vqukq55dx" path="res://sprites/horu/images/enemy_bomber_anger_spr_2.png" id="16_nj001"]
[ext_resource type="Texture2D" uid="uid://b77cddlsct38g" path="res://sprites/horu/images/enemy_bomber_danger_spr_0.png" id="17_52d05"]
[ext_resource type="Texture2D" uid="uid://bw5fkxkyteljc" path="res://sprites/horu/images/enemy_bomber_danger_spr_1.png" id="18_c1gtv"]
[ext_resource type="Texture2D" uid="uid://bp32k2eck2iyr" path="res://sprites/horu/images/enemy_bomber_danger_spr_2.png" id="19_sc6ej"]
[ext_resource type="Texture2D" uid="uid://dooguli8l8ay7" path="res://sprites/horu/images/enemy_bomber_arms1.png" id="21_lfps1"]
[ext_resource type="Texture2D" uid="uid://bj23n3i6a5hvw" path="res://sprites/horu/images/enemy_bomber_arms2.png" id="22_cnk48"]
[ext_resource type="Texture2D" uid="uid://bhb6spnt6n4xs" path="res://sprites/horu/images/enemy_bomber_arms3.png" id="23_7rxpd"]
[ext_resource type="Texture2D" uid="uid://capc1hdlw0gpl" path="res://sprites/horu/images/stars1.png" id="26_lattt"]
[ext_resource type="Texture2D" uid="uid://caxf4k5okg3cr" path="res://sprites/horu/images/stars2.png" id="27_nfe35"]
[ext_resource type="Texture2D" uid="uid://bpaljgkr5iu14" path="res://sprites/horu/images/stars3.png" id="28_8mal3"]
[ext_resource type="Texture2D" uid="uid://cog7sk80ykf4o" path="res://sprites/bomb.png" id="33_t3jql"]
[ext_resource type="FontFile" uid="uid://cqp5o2vpb07yg" path="res://fonts/prstartk.ttf" id="44_5fwg8"]

[sub_resource type="SpriteFrames" id="SpriteFrames_0vk2b"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_gafi4")
}, {
"duration": 1.0,
"texture": ExtResource("3_jwc7p")
}, {
"duration": 1.0,
"texture": ExtResource("4_hb2qp")
}],
"loop": true,
"name": &"dead_fire",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("5_m1i1i")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("6_t8377")
}, {
"duration": 1.0,
"texture": ExtResource("7_ajmyw")
}, {
"duration": 1.0,
"texture": ExtResource("8_66spr")
}],
"loop": true,
"name": &"killing",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("5_m1i1i")
}],
"loop": true,
"name": &"stunned",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("5_m1i1i")
}, {
"duration": 1.0,
"texture": ExtResource("9_5ipwl")
}, {
"duration": 1.0,
"texture": ExtResource("10_bfi6l")
}],
"loop": true,
"name": &"walking",
"speed": 5.0
}]

[sub_resource type="SpriteFrames" id="SpriteFrames_efk2u"]
animations = [{
"frames": [],
"loop": true,
"name": &"dead_fire",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("11_soi5h")
}, {
"duration": 1.0,
"texture": ExtResource("12_c5t40")
}, {
"duration": 1.0,
"texture": ExtResource("13_e76v7")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("14_wldrk")
}, {
"duration": 1.0,
"texture": ExtResource("15_y0r2w")
}, {
"duration": 1.0,
"texture": ExtResource("16_nj001")
}],
"loop": true,
"name": &"killing",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("17_52d05")
}, {
"duration": 1.0,
"texture": ExtResource("18_c1gtv")
}, {
"duration": 1.0,
"texture": ExtResource("19_sc6ej")
}],
"loop": true,
"name": &"stunned",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("11_soi5h")
}, {
"duration": 1.0,
"texture": ExtResource("12_c5t40")
}, {
"duration": 1.0,
"texture": ExtResource("13_e76v7")
}],
"loop": true,
"name": &"walking",
"speed": 5.0
}]

[sub_resource type="SpriteFrames" id="SpriteFrames_t4r55"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("21_lfps1")
}],
"loop": false,
"name": &"default",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("23_7rxpd")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("22_cnk48")
}, {
"duration": 1.0,
"texture": ExtResource("22_cnk48")
}, {
"duration": 1.0,
"texture": ExtResource("22_cnk48")
}, {
"duration": 1.0,
"texture": ExtResource("22_cnk48")
}, {
"duration": 1.0,
"texture": ExtResource("23_7rxpd")
}, {
"duration": 1.0,
"texture": ExtResource("23_7rxpd")
}, {
"duration": 1.0,
"texture": ExtResource("23_7rxpd")
}, {
"duration": 1.0,
"texture": ExtResource("23_7rxpd")
}, {
"duration": 1.0,
"texture": ExtResource("23_7rxpd")
}, {
"duration": 1.0,
"texture": ExtResource("23_7rxpd")
}, {
"duration": 1.0,
"texture": ExtResource("23_7rxpd")
}, {
"duration": 1.0,
"texture": ExtResource("23_7rxpd")
}, {
"duration": 1.0,
"texture": ExtResource("23_7rxpd")
}, {
"duration": 1.0,
"texture": ExtResource("23_7rxpd")
}, {
"duration": 1.0,
"texture": ExtResource("23_7rxpd")
}, {
"duration": 1.0,
"texture": ExtResource("23_7rxpd")
}],
"loop": false,
"name": &"throw",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_44h00"]

[sub_resource type="CircleShape2D" id="CircleShape2D_6yeio"]
radius = 15.7003

[sub_resource type="Animation" id="Animation_k8fva"]
resource_name = "killing"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("sprite:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 0.8, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1, 1.5), Vector2(1.5, 0.8), Vector2(1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_b5rsm"]
_data = {
&"killing": SubResource("Animation_k8fva")
}

[sub_resource type="SpriteFrames" id="SpriteFrames_4xq1w"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("26_lattt")
}, {
"duration": 1.0,
"texture": ExtResource("27_nfe35")
}, {
"duration": 1.0,
"texture": ExtResource("28_8mal3")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_3k0ha"]
size = Vector2(20, 6)

[sub_resource type="CircleShape2D" id="CircleShape2D_203jg"]
radius = 410.005

[node name="EnemyBomber" type="CharacterBody2D"]
script = ExtResource("1_xmjev")

[node name="sprite" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_0vk2b")
animation = &"idle"
autoplay = "dead_fire"

[node name="eyes" type="AnimatedSprite2D" parent="sprite"]
sprite_frames = SubResource("SpriteFrames_efk2u")
animation = &"idle"

[node name="Bomb" type="Sprite2D" parent="."]
visible = false
position = Vector2(0, -32)
texture = ExtResource("33_t3jql")

[node name="BombMark" type="Marker2D" parent="."]
position = Vector2(0, -41)

[node name="arms" type="AnimatedSprite2D" parent="."]
position = Vector2(-1, -8)
sprite_frames = SubResource("SpriteFrames_t4r55")
animation = &"throw"

[node name="collider" type="CollisionShape2D" parent="."]
position = Vector2(0, 6)
shape = SubResource("RectangleShape2D_44h00")

[node name="Area" type="Area2D" parent="."]
collision_layer = 33
collision_mask = 33

[node name="collider" type="CollisionShape2D" parent="Area"]
shape = SubResource("CircleShape2D_6yeio")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_b5rsm")
}
speed_scale = 2.0

[node name="stars_stunned" type="AnimatedSprite2D" parent="."]
visible = false
scale = Vector2(1.3, 1.3)
sprite_frames = SubResource("SpriteFrames_4xq1w")
autoplay = "default"
frame_progress = 0.742572

[node name="enemy_jump" type="Area2D" parent="."]
script = ExtResource("1_2prdc")

[node name="collider" type="CollisionShape2D" parent="enemy_jump"]
position = Vector2(0, -16)
shape = SubResource("RectangleShape2D_3k0ha")

[node name="ActiveArea" type="Area2D" parent="."]

[node name="collider" type="CollisionShape2D" parent="ActiveArea"]
position = Vector2(0, -204)
shape = SubResource("CircleShape2D_203jg")

[node name="lbl_status" type="Label" parent="."]
visible = false
offset_left = -16.0
offset_top = -78.0
offset_right = 16.0
offset_bottom = -37.0
theme_override_colors/font_color = Color(1, 0, 0, 1)
theme_override_fonts/font = ExtResource("44_5fwg8")
theme_override_font_sizes/font_size = 16
text = "!"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="animation_finished" from="arms" to="." method="_on_arms_animation_finished"]
[connection signal="body_entered" from="Area" to="." method="_on_area_body_entered"]
[connection signal="body_entered" from="ActiveArea" to="." method="_on_active_area_body_entered"]
